# WiFi-VirtDisk

./: .gitignore  Handbuch WiFi-VirtDisk.md  Manual WiFi-VirtDisk.md  README.md
S220718-R290823_IOS-Z80-MBC2/: S220718-R290823_IOS-Z80-MBC2.ino  pffArduino.h  virtDisk.cpp  virtDisk.h
WiFi-VirtDisk-Client/: SPICallbacks.cpp  SPICallbacks.h  SPISlave.h  WiFi-VirtDisk-Client.ino  debug.h  virtDisk.cpp  virtDisk.hpp
WiFi-VirtDisk-Server/: CMakeLists.txt
WiFi-VirtDisk-Server/Release/: .WiFi-VirtDisk
WiFi-VirtDisk-Server/Release/share/: libdskrc
WiFi-VirtDisk-Server/doc/: .WiFi-VirtDisk  .libdsk.ini
WiFi-VirtDisk-Server/src/: CMakeLists.txt  WiFi-VirtDisk-Server.cpp  argparse.h  config.h  helper.cpp  helper.h  input.c  input.h  libdsk.h  message.cpp  message.h  test.cpp  test.h  version-git.in  version-svn.in  version.cmake  version.h  version.in  version.rc  virtDisk.cpp  virtDisk.hpp
WiFi-VirtDisk-Server/src/SimpleIni/: SimpleIni.h
WiFi-VirtDisk-Server/src/cpmtools/: cpmfs.c  device_posix.c
WiFi-VirtDisk-Server/src/libdsk/: Makefile.am  Makefile.in  compress.c  comptlzh.c  drivers.h  drivers.inc  drv.h  drvadisk.c  drvadisk.h  drvcfi.c  drvcfi.h  drvcpcem.c  drvcpcem.h  drvd64.c  drvd64.h  drvd88.c  drvd88.h  drvdc42.c  drvdc42.h  drvdos16.c  drvdos16.h  drvdos32.h  drvdskf.c  drvdskf.h  drvgotek.c  drvgotek.h  drvi.h  drvimd.c  drvimd.h  drvint25.c  drvint25.h  drvjv3.c  drvjv3.h  drvldbs.c  drvldbs.h  drvldbst.c  drvldbst.h  drvlinux.c  drvlinux.h  drvlogi.c  (+37 more)
doc/: Handbuch WiFi-VirtDisk.md  Manual WiFi-VirtDisk.md  Protocol definitions.md  (+1 more)
(+4 files in other folders)
